terraform/main.tf
provider "aws" {
  region  = "us-east-1"
  profile = "terraformer"
}

resource "aws_security_group" "allow_http_ssh_mongo" {
  name        = "allow_http_ssh_mongo"
  description = "Allow 22, 8080, 27017"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 27017
    to_port     = 27017
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "andrew-projects-api" {
  ami                    = "ami-0c7217cdde317cfec"
  instance_type          = var.instance_type
  key_name               = var.key_name
  security_groups        = [aws_security_group.allow_http_ssh_mongo.name]
  associate_public_ip_address = true

  user_data = file("init.sh")

  tags = {
    Name = "andrew-projects-api"
  }
}
